syntax = "proto3";

package mpb;

option go_package = "./mpb";

import "common.proto";

service AccountService {
    //rpc RegisterAccount(ReqRegisterAccount) returns (AccountInfo);
    rpc LoginByPassword(ReqLoginByPassword) returns (ResLoginByPassword);
    rpc GetAccountInfo(ReqUserId) returns (AccountInfo);
    rpc GetAccountInfoByAccount(ReqGetAccountInfoByAccount) returns (AccountInfo);
    rpc GenerateNonce(Empty) returns (ResGenerateNonce);
    rpc WebLoginByWallet(ReqWebLoginByWallet) returns (ResWebLoginByWallet);
    rpc GenerateAndSendEmailBindCode(ReqGenerateAndSendEmailBindCode) returns (Empty);
    rpc WebBindEmail(ReqWebBindEmail) returns (ResWebBindEmail);
    rpc GetAptosAccount(ReqUserId) returns (ResGetAptosAccount);
    rpc ChangePassword(ReqChangePassword) returns (Empty);
    rpc SendEmailResetPasswordCode(ReqSendEmailResetPasswordCode) returns (Empty);
    rpc CheckEmailResetPasswordCode(ReqCheckEmailResetPasswordCode) returns (ResCheckEmailResetPasswordCode);
    rpc ResetPasswordByEmail(ReqResetPasswordByEmail) returns (Empty);
    rpc ResetPasswordByEmailAndVCode(ReqResetPasswordByEmailAndVCode) returns (Empty);
}

message ReqLoginByPassword {
    string account = 1;
    string password = 2;
    string remote_ip = 3;
    string region = 4;
}

message ResLoginByPassword {
    AccountInfo account = 1;
    string resources = 2;
    string token = 3;
}

message ReqGetAccountInfo {
    string account = 1;
}

message ReqRegisterAccount {
    string account = 1;
    string password = 2;
    string device = 3;
    string os = 4;
    string device_id = 5;
    string client_version = 6;
    string region = 7;
    string remote_ip = 8;
    string platform = 9;
}

message ResGenerateNonce {
    string nonce = 1;
}

message ReqWebLoginByWallet {
    string wallet_addr = 1;
    bytes pub_key = 2;
    string nonce = 3;
    string remote_ip = 4;
    string region = 5;
    string aptos_full_msg = 6;
    string aptos_signature = 7;
}

message ResWebLoginByWallet {
    WebAccountInfo account = 1;
    string resources = 2;
    string token = 3;
}

message ReqGetAccountInfoByAccount {
    string account = 1;
}

message ReqGenerateAndSendEmailBindCode {
    string email = 1;
}

message ReqWebBindEmail {
    uint64 user_id = 1;
    string email = 2;
    string code = 3;
}

message ResWebBindEmail {
    WebAccountInfo account = 1;
    string resources = 2;
    string token = 3;
}

message ResGetAptosAccount {
    string aptos_acc_addr = 1;
    string pub_key = 2;
}

message ReqChangePassword {
    uint64 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}

message ReqSendEmailResetPasswordCode {
    string email = 1;
}

message ReqCheckEmailResetPasswordCode {
    string email = 1;
    string code = 2;
}

message ResCheckEmailResetPasswordCode {
    string nonce = 1;
}

message ReqResetPasswordByEmail {
    string email = 1;
    string password = 2;
    string nonce = 3;
}

message ReqResetPasswordByEmailAndVCode {
    string email = 1;
    string password = 2;
    string code = 3;
}